# compiler

./: Cargo.toml  README.md  install.sh
crates/emela-backend-js/src/: lib.rs
crates/emela-backend-wasm/src/: lib.rs
crates/emela-codegen/src/: ir.rs  lib.rs  platform.rs  plugin.rs  text.rs  types.rs
crates/emela-wasm/src/: lib.rs
crates/emela/src/: ast.rs  driver.rs  external.rs  lexer.rs  lib.rs  lower.rs  parser.rs  typecheck.rs
crates/emela/tests/: platform.rs  wasm_examples.rs
examples/: pipeline.emel  print_int.emel
examples/stdlib/: main.emel
examples/stdlib/src/: int.emel
src/: ast.rs  driver.rs  lexer.rs  main.rs  parser.rs  typecheck.rs
tests/: minimal_cli.rs
