[workspace]
resolver = "2"
members = [
    "crates/emela-codegen",
    "crates/emela-backend-js",
    "crates/emela-backend-wasm",
    "crates/emela",
]

[workspace.package]
edition = "2024"
version = "0.1.0"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wat = "1"
wasmparser = "0.252"
emela-codegen = { path = "crates/emela-codegen", version = "0.1.0" }
emela-backend-js = { path = "crates/emela-backend-js", version = "0.1.0" }
emela-backend-wasm = { path = "crates/emela-backend-wasm", version = "0.1.0" }
